package pumlFromJava;

public enum Modificateur {
    ABSTRACT, STATIC, FINAL
}
