package pumlFromJava;

public enum TypeAssociation {
    HERITAGE, SIMPLE, IMPLEMENT, AGREGATION, COMPOSITION, DEPENDANCE
}
