package pumlFromJava;

public enum Visibilite {
    PUBLIC, PROTECTED, PRIVATE, NONE
}
