@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold

hide empty members

class Java2Puml{
}
class PumlDoclet{
    isDca
}
class PumlDiagram{
    isDca
}
abstract class ElementContent{
    etagePuml
}
class EnumContent{
}
class ClassContent{
}
class InterfaceContent{
}
class Attribut{
    nom
    isPumlVisible
}
class Methode{
    isConstructor
    isPumlVisible
}
enum Modificateur <<enum>>{
    ABSTRACT
    STATIC
    FINAL
}
class Association{
    isPumlVisible
    mult1
    mult2
}
enum TypeAssociation <<enum>>{
    HERITAGE
    SIMPLE
    IMPLEMENT
    AGREGATION
    COMPOSITION
}
enum Visibilite <<enum>>{
    PUBLIC
    PROTECTED
    PRIVATE
}
class GenerateurDiagramme{
    isDCA
}

Java2Puml - PumlDoclet
PumlDoclet - PumlDiagram
PumlDiagram - GenerateurDiagramme
PumlDiagram - ElementContent
PumlDiagram -- Association
ElementContent --|> ClassContent
ElementContent --|> EnumContent
ElementContent --|> InterfaceContent
ClassContent -- Attribut
ClassContent -- Methode
EnumContent -- Attribut
InterfaceContent -- Methode
Attribut  --  Visibilite
Methode  -- Visibilite
Attribut  -- Modificateur
Methode --  Modificateur
Methode - Attribut
Association - ElementContent
Association -- TypeAssociation
Association -- Attribut

@enduml